--- a/index.html
+++ b/index.html
@@ -9,6 +9,40 @@
     <title>Madlibs</title>
   </head>
   <body>
+    <div class="container">
+      <div id="blanks">
+        <form>
+          <div class="form-group">
+            <label for="nounInput">Noun Input</label>
+            <input type="text" class="form-control" id="noun" placeholder="noun">
+          </div>
+          <div class="form-group">
+            <label for="nounInput2">Noun Input</label>
+            <input type="text" class="form-control" id="noun2" placeholder="noun">
+          </div>
+          <div class="form-group">
+            <label for="verbInput">Verb Input</label>
+            <input type="text" class="form-control" id="verb" placeholder="noun">
+          </div>
+          <div class="form-group">
+            <label for="adjInput">Adjective Input</label>
+            <input type="text" class="form-control" id="adj" placeholder="adjective">
+          </div>
+          <div class="form-group">
+            <label for="adverbInput">Adverb Input</label>
+            <input type="text" class="form-control" id="adverb" placeholder="adverb">
+          </div>
 
+          <button type="submit" class="btn btn-default" name="button">See your story</button>
+        </form>
+      </div>
+
+      <div id="story">
+        <h1>Random Story</h1>
+        <p>
+          Lorem ipsum dolor sit amet, <span class="noun"></span> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <span class="noun2"></span>enim ad minim veniam, quis nostrud <span class="verb"></span>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in <span class="adj"></span> voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat <span class="adverb"></span> cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
