--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="container">
+      <h1>Lorem Ipsum Story</h1>
       <div id="blanks">
         <form>
           <div class="form-group">
@@ -22,7 +23,7 @@
           </div>
           <div class="form-group">
             <label for="verbInput">Verb Input</label>
-            <input type="text" class="form-control" id="verb" placeholder="noun">
+            <input type="text" class="form-control" id="verb" placeholder="verb">
           </div>
           <div class="form-group">
             <label for="adjInput">Adjective Input</label>
@@ -40,7 +41,7 @@
       <div id="story">
         <h1>Random Story</h1>
         <p>
-          Lorem ipsum dolor sit amet, <span class="noun"></span> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <span class="noun2"></span>enim ad minim veniam, quis nostrud <span class="verb"></span>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in <span class="adj"></span> voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat <span class="adverb"></span> cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Lorem ipsum dolor sit amet, <span class="noun"></span> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <span class="noun2"></span> enim ad minim veniam, quis nostrud <span class="verb"></span> exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in <span class="adj"></span>  voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat <span class="adverb"></span> cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
       </div>
     </div>
