add content, css, javascript to letter, create navbar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </head>
   <body>
     <div class="container">
+      <ul class="nav nav-tabs">
+        <li role="presentation" class="active"><a href="index.html">Madlibs</a></li>
+        <li role="presentation"> <a href="letter.html">Letter</a></li>
+      </ul>
       <h1>Lorem Ipsum Story</h1>
       <div id="blanks">
         <form>
